package com.lft.uml.p4_association;

/**
 * Function: 		ADD FUNCTION.
 * Reason:   		ADD REASON.
 * Date:            2020/9/6 21:38
 * E-mail:			laifengting@foxmail.com
 * <p>
 * Class Name:      Person2
 * Package Name:    com.lft.uml.association
 * @author Laifengting
 * @version 1.0.0
 * @since JDK 8
 */
public class Person2 {
	private IDCard2 card;
}
